moc: rewrite the stringData() algorithm so we can have a temporary store
First step in moving it inside of the qt_create_metaobjectdata()
function and passing as a parameter to QtMocHelpers::metaObjectData().

Change-Id: Ie2d2603b12daab33d36bfffd297d91af46e26c3d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -491,6 +491,12 @@ qt_internal_extend_target(Core
     SOURCES ${core_version_tagging_files}
 )
 
+if(GCC OR CLANG)
+    # qglobal.cpp has #include moc_qnamespace.cpp, so increase the template
+    # depth for it due to the size of the Qt namespace
+    set_source_files_properties(global/qglobal.cpp PROPERTIES
+        COMPILE_OPTIONS "-ftemplate-depth=2048")
+endif()
 
 if(GCC)
     # Disable LTO, as the symbols disappear somehow under GCC
@@ -500,6 +506,7 @@ if(GCC)
     set_source_files_properties(${core_version_tagging_files}
         PROPERTIES COMPILE_OPTIONS "-fno-lto")
 endif()
+
 
 qt_internal_extend_target(Core
     CONDITION ( TEST_architecture_arch STREQUAL i386 ) OR
