QJson: Move parsing from QJsonDocument to QJsonValue
JSON values are now parsed by QJsonValue instead of QJsonDocument. For
parsing, this removes the need for QJsonDocument entirely.

Fixes: QTBUG-109870
Change-Id: I2f9bae3a53e5d445cc9e8437c63a53a2c7b3593e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -207,6 +207,7 @@ qt_internal_add_module(Core
         serialization/qjsoncbor.cpp
         serialization/qjsondocument.cpp serialization/qjsondocument.h
         serialization/qjsonobject.cpp serialization/qjsonobject.h
+        serialization/qjsonparseerror.h
         serialization/qjsonparser.cpp serialization/qjsonparser_p.h
         serialization/qjsonvalue.cpp serialization/qjsonvalue.h
         serialization/qjsonwriter.cpp serialization/qjsonwriter_p.h
