Improve windowflags manual test
Group the Qt::CustomizeWindowHint specific flags separately, to make
it clear that they only apply if Qt::CustomizeWindowHint is set, and
give the QWindow preview window a title.

Add option to visualize the safe areas of the window.

Change-Id: I25ae7229b47ceaaa02f4be5a8210dbe44f54b6fa
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>

--- a/tests/manual/windowflags/CMakeLists.txt
+++ b/tests/manual/windowflags/CMakeLists.txt
@@ -16,5 +16,6 @@ qt_internal_add_manual_test(tst_manual_windowflags
         controls.cpp # undef QT_NO_FOREACH
     LIBRARIES
         Qt::Gui
+        Qt::GuiPrivate
         Qt::Widgets
 )
