Revert "Remove lint expection in developer build"
This reverts commit 6bb3feffd56424d0990b1345f343012a60e3351e, which
resulted in cyclic dependencies when running _check targets several
times:

ninja: error: dependency cycle: qtbase/src/android/templates/build.gradle
-> qtbase/src/android/templates/build.gradle

Pick-to: 6.8
Change-Id: I5ae178d137044afe7b627d2637bc43913f00812a
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/android/templates/CMakeLists.txt
+++ b/src/android/templates/CMakeLists.txt
@@ -3,30 +3,9 @@
 
 # Android template files
 
-set(build_gradle "build.gradle")
-if(QT_FEATURE_developer_build)
-    file(READ "${CMAKE_CURRENT_SOURCE_DIR}/${build_gradle}" build_gradle_in)
-    string(REGEX REPLACE
-        "\n *//noinspection GradleDependency\n"
-        "\n"
-        build_gradle_out
-        "${build_gradle_in}"
-    )
-    qt_configure_file(
-        OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${build_gradle}"
-        CONTENT "${build_gradle_out}"
-    )
-else()
-    configure_file(
-        "${CMAKE_CURRENT_SOURCE_DIR}/${build_gradle}"
-        "${CMAKE_CURRENT_BINARY_DIR}/${build_gradle}"
-        COPYONLY
-    )
-endif()
-
 set(template_files
     "${CMAKE_CURRENT_SOURCE_DIR}/AndroidManifest.xml"
-    "${CMAKE_CURRENT_BINARY_DIR}/${build_gradle}")
+    "${CMAKE_CURRENT_SOURCE_DIR}/build.gradle")
 
 set(template_directories
     "${CMAKE_CURRENT_SOURCE_DIR}/res")
