--- a/src/sql/CMakeLists.txt
+++ b/src/sql/CMakeLists.txt
@@ -58,8 +58,7 @@ qt_internal_add_docs(Sql
     doc/qtsql.qdocconf
 )
 
-# include the snippet projects for developer-builds
-if(QT_FEATURE_private_tests)
+if(QT_FEATURE_doc_snippets)
     add_subdirectory(doc/snippets/code)
     add_subdirectory(doc/snippets/sqldatabase)
 endif()
