QFontEngine: add test coverage and benchmark for all engines
For some known fonts, confirm that we get the right glyph count and
glyph index for specific unicode code points.

Create QGuiApplication with a specific font engine, and test the fonts
with all engines. On Windows, that's DirectWrite, GDI, and Freetype;
on macOS CoreText and Freetype; and otherwise only Freetype.

Not all fonts will be available with all engines, so test in each test
function whether the font is a good enough match (family is enough, no
need to do a deep test).

Add a benchmark as well, using the same setup plumbing, but with
different test functions.

Change-Id: I2ed279965fc3f1dc3f283d0fe7b018fc3035c67d
Reviewed-by: Anton Kudryavtsev <antkudr@mail.ru>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>

--- a/tests/auto/gui/text/CMakeLists.txt
+++ b/tests/auto/gui/text/CMakeLists.txt
@@ -4,6 +4,7 @@
 add_subdirectory(qabstracttextdocumentlayout)
 add_subdirectory(qfont)
 add_subdirectory(qfontdatabase)
+add_subdirectory(qfontengine)
 add_subdirectory(qfontmetrics)
 add_subdirectory(qglyphrun)
 add_subdirectory(qrawfont)
