macdeployqt: adjust to [[nodiscard]] QFile::open()
The QFile::open() method becomes [[nodiscard]] in Qt 6.10.
However, macdeployqt was not adapted to this change. As a result, an
attempt to bump the Qt version fails in the CI.

This patch fixes the tool.
Amends 7466831509fe163f3fd1e3a6bbf38f6f5a32ef00.

Change-Id: I0dc0bc4c892f42e58d80da2407ddd83781ad8246
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/src/tools/macdeployqt/macdeployqt/CMakeLists.txt
+++ b/src/tools/macdeployqt/macdeployqt/CMakeLists.txt
@@ -16,6 +16,7 @@ qt_internal_add_tool(${target_name}
         main.cpp
     DEFINES
         QT_NO_FOREACH
+        QT_USE_NODISCARD_FILE_OPEN
     LIBRARIES
         ${FWCoreFoundation}
 )
