--- a/src/plugins/REUSE.toml
+++ b/src/plugins/REUSE.toml
@@ -10,6 +10,12 @@ SPDX-FileCopyrightText = "Copyright (C) 2024 The Qt Company Ltd."
 SPDX-License-Identifier = "LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only"
 
 [[annotations]]
+path = ["platforms/wasm/**"]
+precedence = "closest"
+SPDX-FileCopyrightText = "Copyright (C) 2024 The Qt Company Ltd."
+SPDX-License-Identifier = "LicenseRef-Qt-Commercial OR GPL-3.0-only"
+
+[[annotations]]
 path = ["**.qmake.conf", "networkinformation/android/jar/build.gradle",
         "networkinformation/android/jar/settings.gradle"]
 precedence = "closest"
