--- a/tests/auto/network/access/qnetworkreply/REUSE.toml
+++ b/tests/auto/network/access/qnetworkreply/REUSE.toml
@@ -2,12 +2,12 @@ version = 1
 
 [[annotations]]
 path = ["bigfile", "rfc3252.txt"]
-precedence = "override"
+precedence = "closest"
 SPDX-FileCopyrightText = "Copyright (C) The Internet Society (2002).  All Rights Reserved."
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
 path = ["resource"]
-precedence = "override"
+precedence = "closest"
 SPDX-FileCopyrightText = "Copyright (C) The Internet Society (1998).  All Rights Reserved."
 SPDX-License-Identifier = "CC0-1.0"
