Increase VxWorks stack size
Increases to around 16MB with the format change.
Required by some tests.

Pick-to: 6.9
Change-Id: Ia41436b4269220f84271b614ea6f2b96ca605c32
Reviewed-by: Simo Fält <simo.falt@qt.io>

--- a/coin/instructions/vxworks_testrunner.yaml
+++ b/coin/instructions/vxworks_testrunner.yaml
@@ -10,7 +10,7 @@ instructions:
       testdir="$(dirname $1)"
       testexecutable="$1"
       echo RUNNING via serial: "$quoted_args"
-      echo "cmd rtp exec -p 200 -t 0x01000000 -u 1000000 $testexecutable -- $quoted_args" > /home/qt/work/vx.sh
+      echo "cmd rtp exec -p 200 -t 0x01000000 -u 0x1000000 $testexecutable -- $quoted_args" > /home/qt/work/vx.sh
       echo "cmd echo \"qtest_in_vxworks_complete: $?\"" >> /home/qt/work/vx.sh
       #rtp exec            Execute a process.
       #               -p : specify the initial task priority
