--- a/tests/auto/gui/painting/CMakeLists.txt
+++ b/tests/auto/gui/painting/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(qpagelayout)
 add_subdirectory(qpageranges)
 add_subdirectory(qpagesize)
 add_subdirectory(qpainter)
+add_subdirectory(qpainterstateguard)
 if (QT_FEATURE_pdf)
     add_subdirectory(qpdfwriter)
 endif()
