Build the manual lance test
It had been excluded from the manual tests with a strange comment in the
CMakeLists.txt -- e0fb295aad0063410aca3b2a109a7cda15628bda already
ported the code away from QGL and to QOpenGL* classes.

Fix a couple of discarded QFile::open usages.

Change-Id: I248dabd706f34305b7120d3aaf36120040afc08c
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>

--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -21,7 +21,9 @@ add_subdirectory(highdpi)
 add_subdirectory(inputmethodhints)
 add_subdirectory(keypadnavigation)
 add_subdirectory(keyevents)
-#add_subdirectory(lance) # qgl.h missing
+if(QT_FEATURE_opengl)
+  add_subdirectory(lance)
+endif()
 add_subdirectory(qcursor)
 add_subdirectory(qdesktopservices)
 add_subdirectory(qdnslookup)
