Replace qTerminate() with std::terminate() and mark it for removal
It was used by the QT_TERMINATE_ON_EXCEPTION macro, introduced in 2012,
to support pre-C++11 noexcept semantics. That macro was removed for Qt
6.8 in commit 9b2ae564a59656d9cf49b141e70f5958b4fb79a4. This commit
amends that removing the definition of qTerminate() immediately in Qt
6.9 (it was an \internal function).

Pick-to: 6.9
Change-Id: I9682121c04fafb3676b0fffd9f5ac999e7603c84
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -49,7 +49,7 @@ qt_internal_add_module(Core
         global/qcontainerinfo.h
         global/qdarwinhelpers.h
         global/qendian.cpp global/qendian.h global/qendian_p.h
-        global/qexceptionhandling.cpp global/qexceptionhandling.h
+        global/qexceptionhandling.h
         global/qflags.h
         global/qfloat16.cpp global/qfloat16.h
         global/qforeach.h
