--- a/cmake/QtModuleToolsDependencies.cmake.in
+++ b/cmake/QtModuleToolsDependencies.cmake.in
@@ -2,15 +2,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 
 # Find "ModuleTools" dependencies, which are other ModuleTools packages.
-set(@INSTALL_CMAKE_NAMESPACE@@target@_FOUND FALSE)
-set(__qt_@target@_tool_deps "@package_deps@")
-foreach(__qt_@target@_target_dep ${__qt_@target@_tool_deps})
-    list(GET __qt_@target@_target_dep 0 __qt_@target@_pkg)
-    list(GET __qt_@target@_target_dep 1 __qt_@target@_version)
-
-    if (NOT ${__qt_@target@_pkg}_FOUND)
-        find_dependency(${__qt_@target@_pkg} ${__qt_@target@_version})
-    endif()
-endforeach()
-
 set(@INSTALL_CMAKE_NAMESPACE@@target@_FOUND TRUE)
+
+set(__qt_@target@_tool_deps "@package_deps@")
+_qt_internal_find_tool_dependencies("@target@" __qt_@target@_tool_deps)
