--- a/cmake/QtPluginDependencies.cmake.in
+++ b/cmake/QtPluginDependencies.cmake.in
@@ -6,6 +6,7 @@ set(@target@_FOUND TRUE)
 # note: _third_party_deps example: "ICU\\;FALSE\\;1.0\\;i18n uc data;ZLIB\\;FALSE\\;\\;"
 set(__qt_@target@_third_party_deps "@third_party_deps@")
 _qt_internal_find_third_party_dependencies("@target@" __qt_@target@_third_party_deps)
+unset(__qt_@target@_third_party_deps)
 
 set(__qt_use_no_default_path_for_qt_packages "NO_DEFAULT_PATH")
 if(QT_DISABLE_NO_DEFAULT_PATH_IN_QT_PACKAGES)
@@ -17,6 +18,8 @@ set(__qt_@target@_target_deps "@target_deps@")
 set(__qt_@target@_find_dependency_paths "@find_dependency_paths@")
 _qt_internal_find_qt_dependencies("@target@" __qt_@target@_target_deps
                                   __qt_@target@_find_dependency_paths)
+unset(__qt_@target@_target_deps)
+unset(__qt_@target@_find_dependency_paths)
 
 if(__qt_${target}_missing_deps)
     set(@target@_FOUND FALSE)
