--- a/tests/auto/cmake/test_private_targets/CMakeLists.txt
+++ b/tests/auto/cmake/test_private_targets/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(test_private_targets)
 
-find_package(Qt6Gui REQUIRED)
+find_package(Qt6GuiPrivate REQUIRED)
 
 add_executable(testapp main.cpp)
 target_link_libraries(testapp Qt::GuiPrivate)
