--- a/cmake/QtModuleToolsDependencies.cmake.in
+++ b/cmake/QtModuleToolsDependencies.cmake.in
@@ -4,5 +4,8 @@
 # Find "ModuleTools" dependencies, which are other ModuleTools packages.
 set(@INSTALL_CMAKE_NAMESPACE@@target@_FOUND TRUE)
 
+set(__qt_@target@_tool_third_party_deps "@third_party_deps@")
+_qt_internal_find_third_party_dependencies("@target@" __qt_@target@_tool_third_party_deps)
+
 set(__qt_@target@_tool_deps "@package_deps@")
 _qt_internal_find_tool_dependencies("@target@" __qt_@target@_tool_deps)
