QMessageLogger: test that QT_FATAL_{WARNINGS,CRITICALS} work
Pick-to: 6.8 6.9
Change-Id: I8a7f56d67043bae14e10fffdfbaf3060486edbf1
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>

--- a/tests/auto/corelib/global/qlogging/CMakeLists.txt
+++ b/tests/auto/corelib/global/qlogging/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 qt_internal_add_executable(qlogging_helper
     NO_INSTALL
     OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    SOURCES qlogging_helper.cpp
+    SOURCES qlogging_helper.cpp ../../../../shared/disablecoredumps.cpp
     DEFINES QT_MESSAGELOGCONTEXT
     LIBRARIES Qt::Core)
 
