--- a/tests/auto/corelib/global/qlogging/CMakeLists.txt
+++ b/tests/auto/corelib/global/qlogging/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 qt_internal_add_executable(qlogging_helper
     NO_INSTALL
     OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    SOURCES app/main.cpp
+    SOURCES qlogging_helper.cpp
     DEFINES QT_MESSAGELOGCONTEXT
     LIBRARIES Qt::Core)
 
