Disable qlocale tests on WASM in CI
Emscripten compiler running out of memory in CI when adding more tests
to qlocale, preventing integration. Disabling the tests will allow the
changes to be integrated.

Task-number: QTBUG-133219
Change-Id: Ia6566fdeaae4ae54398ac8fedcbb7a225037f662
Reviewed-by: Piotr Wierciński <piotr.wiercinski@qt.io>

--- a/tests/auto/corelib/text/CMakeLists.txt
+++ b/tests/auto/corelib/text/CMakeLists.txt
@@ -30,4 +30,6 @@ add_subdirectory(qstringtokenizer)
 add_subdirectory(qstringview)
 add_subdirectory(qtextboundaryfinder)
 add_subdirectory(qunicodetools)
+if (NOT WASM) # QTBUG-133219
 add_subdirectory(qlocale)
+endif()
