--- a/cmake/QtModuleConfig.cmake.in
+++ b/cmake/QtModuleConfig.cmake.in
@@ -32,7 +32,7 @@ if (NOT QT_NO_CREATE_TARGETS AND @INSTALL_CMAKE_NAMESPACE@@target@_FOUND)
 endif()
 
 # Find the private module counterpart.
-set(__qt_@target@_always_load_private_module OFF)
+set(__qt_@target@_always_load_private_module @always_load_private_module@)
 include("${CMAKE_CURRENT_LIST_DIR}/@INSTALL_CMAKE_NAMESPACE@@target@-build.cmake" OPTIONAL)
 if (@INSTALL_CMAKE_NAMESPACE@@target@_FOUND
         AND NOT @INSTALL_CMAKE_NAMESPACE@@target_private@_FOUND
